slider overflow fixed

--- a/src/components/slider/slider.module.css
+++ b/src/components/slider/slider.module.css
@@ -3,7 +3,9 @@
   width: 100%;  
   box-shadow: inset rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
-
+.glide{
+  overflow: hidden;
+}
 .glide__track {
   overflow: visible;
   margin: auto;
